force-app/main/default/objects/Bot_Utterance__c/Bot_Utterance__c.object-meta.xml
<CustomObject>
    <label>Bot Utterance</label>
    <nameField>
        <displayFormat>BOTLOG-{000}</displayFormat>
        <label>Bot Utterance UID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bot Utterances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>