force-app/main/default/objects/Bot_Utterance__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Bot Utterances</relationshipLabel>
    <relationshipName>Bot_Utterances</relationshipName>
    <type>Lookup</type>
</CustomField>