force-app/main/default/objects/Bot_Utterance__c/fields/Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Bot Utterances</relationshipLabel>
    <relationshipName>Bot_Utterances</relationshipName>
    <type>Lookup</type>
</CustomField>