force-app/main/default/objects/Bot_Utterance__c/fields/Current_Utterance__c.field-meta.xml
<CustomField>
    <fullName>Current_Utterance__c</fullName>
    <description>What did the customer (or agent) say</description>
    <label>Current Utterance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>