force-app/main/default/objects/Bot_Utterance__c/fields/Intent_1__c.field-meta.xml
<CustomField>
    <fullName>Intent_1__c</fullName>
    <label>Intent 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>