force-app/main/default/objects/Bot_Utterance__c/fields/Intent_2__c.field-meta.xml
<CustomField>
    <fullName>Intent_2__c</fullName>
    <label>Intent 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>