force-app/main/default/objects/Bot_Utterance__c/fields/Intent_Confidence_1__c.field-meta.xml
<CustomField>
    <fullName>Intent_Confidence_1__c</fullName>
    <label>Intent Confidence 1</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>