force-app/main/default/objects/Bot_Utterance__c/fields/Intent_Confidence_2__c.field-meta.xml
<CustomField>
    <fullName>Intent_Confidence_2__c</fullName>
    <label>Intent Confidence 2</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>