force-app/main/default/objects/Bot_Utterance__c/fields/LiveChatTranscript_c__c.field-meta.xml
<CustomField>
    <fullName>LiveChatTranscript_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LiveChatTranscript__c</label>
    <referenceTo>LiveChatTranscript__c</referenceTo>
    <relationshipLabel>Bot Utterances</relationshipLabel>
    <relationshipName>Bot_Utterances</relationshipName>
    <type>Lookup</type>
</CustomField>