force-app/main/default/objects/Bot_Utterance__c/fields/Sentiment_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Confidence__c</fullName>
    <label>Sentiment Confidence</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>