force-app/main/default/objects/Bot_Utterance__c/fields/Utterance_Source__c.field-meta.xml
<CustomField>
    <fullName>Utterance_Source__c</fullName>
    <label>Utterance Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>